[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Mu Editor"
bundle = "mu.codewith"
version = "1.1.0a2"
url = "https://codewith.mu/"
license = "GNU General Public License v2 (GPLv2)"
author = 'Nicholas Tollervey'
author_email = "ntoll@ntoll.org"

[tool.briefcase.app.mu]
formal_name = "Mu Editor"
description = "A simple Python editor for beginner programmers."
icon = "package/icons/mac_icon"
sources = ['mu']
requires = [
    'PyQt5==5.12.1;"arm" not in platform_machine',
    'QScintilla==2.11.1;"arm" not in platform_machine',
    'PyQtChart==5.12;"arm" not in platform_machine',
    # `flake8` is actually a testing/packaging dependency that, among other
    # packages, brings in `pycodestyle` and `pyflakes` which are runtime
    # dependencies. For the sake of "locality", it is being declared here,
    # though. Regarding these packages' versions, please refer to:
    # http://flake8.pycqa.org/en/latest/faq.html#why-does-flake8-use-ranges-for-its-dependencies
    "flake8 >= 3.7.8",
    "pycodestyle >= 2.5.0, < 2.6.0",
    "pyflakes >= 2.1.0, < 2.2.0",
    "pyserial==3.4",
    "qtconsole==4.4.3",
    "pgzero==1.2",
    "appdirs>=1.4.3",
    "semver>=2.8.0",
    "nudatus>=0.0.3",
    'black>=18.9b0;python_version > "3.5"',
    "Flask==1.0.2",
]


[tool.briefcase.app.mu.macOS]
requires = []

[tool.briefcase.app.mu.linux]
requires = []

[tool.briefcase.app.mu.windows]
requires = []

